@@ -1,3 +1,8 @@
+2009-03-13  Andrew Haley  <aph@redhat.com>
+
+	* java/lang/natClassLoader.cc (_Jv_RegisterClassHookDefault): Clear
+	INTERPRETED access modifier.
+
 2009-01-24  Release Manager
 
 	* GCC 4.3.3 released.
